# kohonen-som

./: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
notebooks/: kohonen.ipynb
resources/: data.csv
src/: kohonen_som.py  train.py
test/: test_kohonen_som.py  test_train.py
