[tool.poetry]
name = "koh"
version = "0.1.0"
description = "."
authors = ["Anja Wolf"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "src/kohonen_som.py" }
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.2"
matplotlib = "^3.5.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
